--- a/NEWS
+++ b/NEWS
@@ -599,6 +599,9 @@ version 0.99.7: (2017-10-05) - After @nturaga review
 version 0.99.8: (2017-10-10)
 - version bump to trigger a new Bioconductor build
 
+version 0.99.9: (2017-10-16)
+- Updated URL and BugReports in DESCRIPTION
+
 - DEVELOPMENT NOTES (potential future changes):
   * Delete BASiCS_VarianceDecomp? 
   * Change plots to use ggplot2?
