--- a/NEWS
+++ b/NEWS
@@ -599,6 +599,16 @@ version 0.99.7: (2017-10-05) - After @nturaga review
 version 0.99.8: (2017-10-10)
 - version bump to trigger a new Bioconductor build
 
+Devel_class branch: (2017-10-16) version number to be added in merge with master
+- Update of NEWS with changes by @neling 
+- Changes in `BASiCS_Chain` and `BASiCS_Summary` classess to contain a single 
+`list` slot where all parameters are stored. This allows greater flexibility 
+to incorporate ongoing developments of BASiCS but does not affect user interface. 
+- `BASiCS_DenoisedCounts`, `BASiCS_DenoisedRates`, `BASiCS_DetectHVG`, 
+`BASiCS_DetectLVG`, `BASiCS_MCMC`, `BASiCS_TestDE`, `HiddenVarDecomp`, 
+`newBASiCS_Chain` functions and all methods updated accordingly. 
+- Small typo fix in class validity from @neling last commit
+
 - DEVELOPMENT NOTES (potential future changes):
   * Delete BASiCS_VarianceDecomp? 
   * Change plots to use ggplot2?
