--- a/NEWS
+++ b/NEWS
@@ -623,6 +623,7 @@ to incorporate ongoing developments of BASiCS but does not affect user interface
 posterior probability thresholds as input
 - Unused argument removed from `HiddenEFDR` and `HiddenEFNR` functions
 - Minor changes to pass R CMD check
+- Check library passes R CMD BiocCheck
 
 
 - DEVELOPMENT NOTES (potential future changes):
