Devel changes (version number once merged with master) - 'ggplot2' added to imports - Default value for SpikeInfo changed to NULL in `newBASiCS_Data` function - Cleaning of `HiddenBASiCS_MCMCcppNoSpikes`
To-do
- Add unit test for no-spikes case
- Check full conditionals for no-spikes case (replace the one for nu
by spikes case)

--- a/NEWS
+++ b/NEWS
@@ -643,5 +643,10 @@ version 0.99.14: (2017-10-19)
 Devel changes (version number once merged with master)
 - 'ggplot2' added to imports
 - Default value for SpikeInfo changed to NULL in `newBASiCS_Data` function
-- Partial cleaning of no-spikes case (removed unused args)
+- Cleaning of `HiddenBASiCS_MCMCcppNoSpikes` 
+
+To-do
+- Add unit test for no-spikes case
+- Check full conditionals for no-spikes case (replace the one for nu
+by spikes case)
 
