--- a/NEWS
+++ b/NEWS
@@ -660,3 +660,6 @@ version 1.1.1: (2017-11-08)
 
 version 1.1.2: (2017-11-08)
 - Skeleton for sampler with integrated out s
+
+version 1.1.3: (2017-11-08)
+- Collapsed sampler implemented (to be tested)
