--- a/NEWS
+++ b/NEWS
@@ -670,5 +670,5 @@ version 1.1.3: (2017-11-08)
 - Store `TableRef` on the `StoreDir` directory (no-spike case only)
 
 version 1.1.4: (2017-11-12)
-- Replace NA values in epsilon chain by 0 to avoid failure of EFDR gridsearch 
-(regression case only)
+- Only include genes that are expressed in at least 2 cells per condition for
+differential residual dispersion testing (regression case only)
