--- a/NEWS
+++ b/NEWS
@@ -665,10 +665,13 @@ version 1.1.3: (2017-11-08)
 - Collapsed sampler implemented (to be tested)
 - Unit tests reverted to original case
 - Version number bump
-
-
 - Store `TableRef` on the `StoreDir` directory (no-spike case only)
 
 version 1.1.4: (2017-11-12)
 - Only include genes that are expressed in at least 2 cells per condition for
 differential residual dispersion testing (regression case only)
+
+version 1.1.5: (2017-11-15)
+- Removal of collapsed sampler prototype (from C++ and R) - moved to 
+`CollapsedSampler` branch
+- Number of genes used for stochastic reference increased to 1000 (no spikes only)
