--- a/NEWS
+++ b/NEWS
@@ -674,4 +674,4 @@ differential residual dispersion testing (regression case only)
 version 1.1.5: (2017-11-15)
 - Removal of collapsed sampler prototype (from C++ and R) - moved to 
 `CollapsedSampler` branch
-- Number of genes used for stochastic reference increased to 1000 (no spikes only)
+- Number of genes used for stochastic reference increased to 10% of genes (no spikes only)
