--- a/NEWS
+++ b/NEWS
@@ -675,3 +675,6 @@ version 1.1.5: (2017-11-15)
 - Removal of collapsed sampler prototype (from C++ and R) - moved to 
 `CollapsedSampler` branch
 - Number of genes used for stochastic reference increased to 10% of genes (no spikes only)
+
+version 1.1.6: (2017-11-15)
+- Added prototype for regression + no-spikes sampler
