--- a/NEWS
+++ b/NEWS
@@ -678,3 +678,9 @@ version 1.1.5: (2017-11-15)
 
 version 1.1.6: (2017-11-15)
 - Added prototype for regression + no-spikes sampler
+
+version 1.1.7: (2017-11-20)
+- Nils added as author in cpp file
+- Updated unit test for no-spikes case (changes due to change in stoch ref)
+- Change in `BASiCS_MCMC` so that only biological counts go to C++
+- Added factorizations in `muUpdateReg` and `deltaUpdateReg` (C++ code)
