--- a/NEWS
+++ b/NEWS
@@ -702,3 +702,6 @@ version 1.1.9: (2017-11-23) - WIP
 - Small changes to unify code format in C++ file
 - Notation change: `phi` replaced by `s` in no-spikes implementation
 - Unit test changed accordingly (no-spike)
+- Minor style changes in `BASiCS_MCMC`
+- `BASiCS_MCMC` function broken into smaller functions (easier to read). This
+creates the following hidden functions: `HiddenBASiCS_MCMC_InputCheck`
