--- a/NEWS
+++ b/NEWS
@@ -718,3 +718,6 @@ version 1.1.10: (2017-11-27)
 
 version 1.1.11: (2017-11-24) 
 - Minor typo in the call to `HiddenBASiCS_MCMCcppNoSpikes` has been resolved
+
+version 1.1.12: (2017-11-28) 
+- Additional changes to improve usage of no-spikes case
