--- a/NEWS
+++ b/NEWS
@@ -721,3 +721,6 @@ version 1.1.11: (2017-11-24)
 
 version 1.1.12: (2017-11-28) 
 - Additional changes to improve usage of no-spikes case
+
+version 1.1.13: (2017-11-28) 
+- Fixed storage of `RefGene` in no-spikes when `StochasticRef = FALSE`
