--- a/NEWS
+++ b/NEWS
@@ -728,3 +728,7 @@ version 1.1.13: (2017-11-28)
 version 1.1.14: (2017-11-29)
 - Minor bug resolved for no-spikes case when original data has spikes
 - New unit test to assess that case
+
+version 1.1.15: (2017-11-29)
+- Typo fixed in `AtLeast2Cells` (`BASiCS_MCMC` function)ndefinition for 
+no-spikes + regression case when original data has spikes
