--- a/NEWS
+++ b/NEWS
@@ -732,3 +732,7 @@ version 1.1.14: (2017-11-29)
 version 1.1.15: (2017-11-29)
 - Typo fixed in `AtLeast2Cells` (`BASiCS_MCMC` function)ndefinition for 
 no-spikes + regression case when original data has spikes
+
+version 1.1.16: (2017-11-29)
+- Change in `BASiCS_MCMC` no-spikes so that only genes with zero total
+counts are excluded from the identifiability constrain
