--- a/NEWS
+++ b/NEWS
@@ -736,3 +736,11 @@ no-spikes + regression case when original data has spikes
 version 1.1.16: (2017-11-29)
 - Change in `BASiCS_MCMC` no-spikes so that only genes with zero total
 counts are excluded from the identifiability constrain
+
+version 1.1.17: (2017-12-07)
+- Stop scaling of size factors for no-spikes case (`HiddenBASiCS_MCMC_Start`)
+- Unit testing updated accordingly 
+- Extra unit test to ensure that no-spikes results match for objects 
+with/without spikes when setting `WithSpikes = FALSE`
+- Modified constrain for no-spikes cases (to deal with non-zero genes)
+- Default value of `ConstrainType` set to 1 in `BASiCS_MCMC` (no-spikes only)
