Added extra files for regression part of vignette

--- a/NEWS
+++ b/NEWS
@@ -747,3 +747,8 @@ with/without spikes when setting `WithSpikes = FALSE`
 
 version 1.1.18: (2017-12-08)
 - Minor typo in `HiddenBASiCS_MCMC_NoSpikesParam` resolved
+
+version 1.1.19: (2017-12-09)
+- extended vignette to describe regression and non-spike case
+- changed markdown to rmarkdown engine to compile vignette to include
+table of contents
