--- a/NEWS
+++ b/NEWS
@@ -754,7 +754,6 @@ version 1.1.19: (2017-12-09)
 table of contents
 
 version 1.1.20: (2017-12-11)
-<<<<<<< Updated upstream
 - Updated dpi option in vignette 
 
 version 1.1.21: (2017-12-13)
@@ -764,3 +763,6 @@ version 1.1.22: (2017-12-15)
 - Documentation on ChainSCReg and ChainRNAReg datasets added
 - Fixed showFit method
 - Updated dpi option in vignette to reduce .html size
+
+version 1.1.23: (2017-12-18)
+- Minor improvements to documentation 
