--- a/NEWS
+++ b/NEWS
@@ -763,6 +763,12 @@ version 1.1.22: (2017-12-15)
 - Documentation on ChainSCReg and ChainRNAReg datasets added
 - Fixed showFit method
 - Updated dpi option in vignette to reduce .html size
+- Default value for `ConstrainProp` set to 0.20 (no-spikes)
+- Unit tests updated accordingly (no-spikes)
 
 version 1.1.23: (2017-12-18)
 - Minor improvements to documentation 
+
+version 1.1.24: (2017-12-18)
+- Reduced no of iterations in unit test for quicker testing
+- library `hexbin` added to imports (required for `showFit`)
